--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ header nav {
     width: 20px;
     max-height: 20px;
     margin-right: 10px;
-    margin-top: 3px;
+    margin-top: 0px;
 }
 
 
@@ -254,4 +254,9 @@ footer span {
 
 .lesson-btns {
     padding: 150px 0;
+}
+
+.lesson img {
+    border-radius: 8px;
+    border: 2px solid #495057;
 }
