--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 /* задаём цвета */
 :root {
     --firstColor: #212529;
@@ -6,24 +8,27 @@
 }
 
 @font-face {
-    font-family: 'Segoe UI';
+    -webkit-font-family: 'Segoe UI', sans-serif;
+    -moz-font-family: 'Segoe UI', sans-serif;
+    font-family: 'Segoe UI', sans-serif;
+    
     src: url(/fonts/Segoe\UI.ttf);
 }
 
 /* общие стили */
 
-#element::-webkit-scrollbar {
+.scroll::-webkit-scrollbar {
     width: 8px;
     height: 8px;
 }
 
-#element::-webkit-scrollbar-track {
+.scroll::-webkit-scrollbar-track {
     -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
     background-color: var(--thirdColor);
     border-radius: 10px;
 }
 
-#element::-webkit-scrollbar-thumb {
+.scroll::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background: var(--secondColor);
 }
@@ -71,20 +76,16 @@ a {
 }
 
 a:hover {
-    opacity: 0.8;
+    scale: 1.01;
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 500px) {
     h1 {
-        
         font-size: 40px;
-        
     }
 
     h2 {
-        
-        font-size: 36px;
-        
+        font-size: 36px;  
     }
 
     h3 {
@@ -97,23 +98,34 @@ a:hover {
 
 /* шапка */
 .nav-fixed-bg {
-    height: 100px;
+    height: 64px;
     background: var(--secondColor);
+    padding-top: 2px;
+}
+
+header a {
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.85);
+}
+
+header a:hover {
+    scale: 1.06;
+    color: rgba(255, 255, 255, 1);
 }
 
 header nav {
     background: var(--secondColor);
-    min-height: 100px;
     max-width: 1320px;
     margin: 0 auto;
 }
 
 .logo-rotate {
     transition: .4s;
+    height: 45px;
 }
 
 .logo-rotate:hover {
-    transform: rotate(-20deg) scale(1.1);
+    transform: rotate(-10deg) scale(1.1);
 }
 
 
@@ -170,6 +182,12 @@ header nav {
     margin-bottom: 150px;
 }
 
+.lessons a, .tests a  {
+    padding: 0;
+    margin: 0 12px;
+    width: 416px;
+}
+
 .lesson-card, .test-card {
     border-radius: 20px;
     border: 1px solid var(--secondColor);
@@ -177,17 +195,20 @@ header nav {
     height: 500px;
 }
 
-@media screen and (max-width: 300px) {
-    .lesson-card, .test-card {
-        border-radius: 20px;
-        border: 1px solid var(--secondColor);
-        background: var(--secondColor);
-        height: 370px;
-    }
-}
-
 .lesson-card img, .test-card img {
     max-width: 427px;
+    width: 100%;
+}
+
+
+@media screen and (max-width: 430px) {
+    .lesson-card, .test-card {
+        height: 390px;
+    }
+
+    .lessons a, .tests a  {
+        padding: 0 12px;
+    }
 }
 
 
@@ -200,13 +221,23 @@ footer {
 }
 
 footer p {
-    color: #DEE2E6;
+    color: rgba(255, 255, 255, 0.9);
     font-size: 32px;
 }
 
 footer span {
-    color: #DEE2E6;
+    color: rgba(255, 255, 255, 0.85);
     font-size: 24px;
+}
+
+footer a {
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.85);
+}
+
+footer a:hover {
+    scale: 1.06;
+    color: rgba(255, 255, 255, 1);
 }
 
 
@@ -243,20 +274,24 @@ footer span {
     border-radius: 8px;
     border: 2px solid #495057;
     background: #1B1F22;
-    padding: 60px 0px;
 }
 
 .code pre {
-    color: #FFF;
     font-family: Consolas;
     font-size: 26px;
+}
+
+.copy-img {
+    margin-top: 12px;
+    cursor: pointer;
+    width: 25px;
 }
 
 .lesson-btns {
     padding: 150px 0;
 }
 
-.lesson img {
+.lesson-img {
     border-radius: 8px;
     border: 2px solid #495057;
 }
