--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 /* задаём цвета */
 :root {
     --firstColor: #212529;
@@ -11,7 +9,6 @@
     -webkit-font-family: 'Segoe UI', sans-serif;
     -moz-font-family: 'Segoe UI', sans-serif;
     font-family: 'Segoe UI', sans-serif;
-    
     src: url(/fonts/Segoe\UI.ttf);
 }
 
@@ -37,6 +34,7 @@ body {
     background: var(--firstColor);
     font-family: 'Segoe UI';
     padding: 0;
+    color: white;
     margin: 0;
 }
 
@@ -47,28 +45,34 @@ body {
 
 a, p {
     font-size: 24px;
-    color: white;
     text-decoration: none;
+    color: white;
 }
 
 h1 {
-    color: white;
     font-size: 55px;
     font-weight: 600;
 }
 
-
-
 h2 {
-    color: white;
     font-size: 48px;
     font-weight: 600;
 }
 
 h3 {
-    color: white;
     font-size: 36px;
     font-weight: 600;
+}
+
+ul li {
+    font-size: 24px;
+    list-style-type: none;
+}
+
+ul li::before {
+    content: "•";
+    color: var(--secondColor);
+    margin-right: 10px;
 }
 
 a {
@@ -109,7 +113,7 @@ header a {
 }
 
 header a:hover {
-    scale: 1.06;
+    scale: 1.02;
     color: rgba(255, 255, 255, 1);
 }
 
@@ -263,11 +267,11 @@ footer a:hover {
 /* Страница урока */
 
 .lesson h2 {
-    margin-bottom: 50px;
+    margin: 70px 0 30px 0;
 }
 
 .lesson p {
-    margin: 50px 0;
+    margin: 30px 0;
 }
 
 .listing-container {
