--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,18 @@ a:hover {
     padding-top: 2px;
 }
 
+.navbar-toggler-icon {
+    background: url(../images/burger-menu.svg);
+}
+
+.navbar-toggler {
+    border: none;
+}
+
+.navbar-toggler:focus {
+    box-shadow: none;
+}
+
 header a {
     font-size: 20px;
     color: rgba(255, 255, 255, 0.85);
@@ -270,6 +282,11 @@ footer a:hover {
     margin: 70px 0 30px 0;
 }
 
+.lesson h3 {
+    margin: 70px 0 30px 0;
+}
+
+
 .lesson p {
     margin: 30px 0;
 }
@@ -278,6 +295,7 @@ footer a:hover {
     border-radius: 8px;
     border: 2px solid #495057;
     background: #1B1F22;
+    margin: 50px;
 }
 
 .code pre {
@@ -298,4 +316,6 @@ footer a:hover {
 .lesson-img {
     border-radius: 8px;
     border: 2px solid #495057;
+    margin: 40px auto;
+    padding: 0;
 }
