--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ h1 {
 
 h2 {
     font-size: 48px;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 h3 {
@@ -247,7 +247,7 @@ footer span {
 }
 
 footer a {
-    font-size: 20px;
+    font-size: 24px;
     color: rgba(255, 255, 255, 0.85);
 }
 
@@ -259,22 +259,16 @@ footer a:hover {
 
 /* страница тестов */
 
-.tests h1, .lesson h1 {
+.tests h1 {
     margin-top: 300px;
     margin-bottom: 150px;
 }
 
-.final-test-card {
-    border-radius: 20px;
-    border: 1px solid var(--secondColor);
-    background: var(--secondColor);
-    height: 500px;
+.lesson h1 {
+    margin-top: 200px;
+    margin-bottom: 50px;
+    text-align: left;
 }
-
-.final-test-img {
-    max-width: 585px;
-}
-
 
 /* Страница урока */
 
@@ -300,7 +294,7 @@ footer a:hover {
 
 .code pre {
     font-family: Consolas;
-    font-size: 26px;
+    font-size: 20px;
 }
 
 .copy-img {
@@ -319,3 +313,14 @@ footer a:hover {
     margin: 40px auto;
     padding: 0;
 }
+
+.example ul li {
+    font-size: 20px;
+}
+
+.example ul li::before {
+    content: "";
+    margin-right: 0px;
+}
+
+
