--- a/public/css/style.css
+++ b/public/css/style.css
@@ -643,8 +643,6 @@ button {
     transition: 0.4s ease-in-out;
     border-radius: 10px;
     background: rgb(255, 255, 255);
-
-
 }
 
 /* общие настройки для обеих сторон карточки */
@@ -653,8 +651,11 @@ button {
     border: 2px solid var(--secondColor);
     border-radius: 10px;
     /* прячем обратную сторону */
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden; /* Для Chrome, Safari, iOS и Android */
+    -moz-backface-visibility: hidden; /* Для Firefox */
+    -ms-backface-visibility: hidden; /* Для Internet Explorer/Edge */
+    -o-backface-visibility: hidden; /* Для старых версий Opera */
+    backface-visibility: hidden; /* Для современных браузеров */
     /* абсолютное позиционирование */
     position: absolute;
     top: 0;
@@ -663,6 +664,7 @@ button {
     width: 100%;
     height: 100%;
     padding: 20px;
+
 }
 
 .game-card .front img, .game-card .back img {
@@ -670,6 +672,17 @@ button {
     display: block;
     margin: 0 auto;
     max-height: 100%;
+
+    -webkit-backface-visibility: hidden; /* Для Chrome, Safari, iOS и Android */
+    -moz-backface-visibility: hidden; /* Для Firefox */
+    -ms-backface-visibility: hidden; /* Для Internet Explorer/Edge */
+    -o-backface-visibility: hidden; /* Для старых версий Opera */
+    backface-visibility: hidden; /* Для современных браузеров */
+}
+
+.back {
+    display: flex;
+    align-items: center;
 }
 
 .game-card .front {
@@ -727,4 +740,29 @@ button {
 
 .win-modal {
     max-width: 500px;
+}
+
+
+/*Страница редактора кода*/
+
+
+.editor-h1 {
+    padding-top: 200px;
+}
+
+#editor {
+    margin-top: 64px;
+    padding-top: 100px;
+    height: 500px;
+    float: left;
+}
+
+#output {
+    resize: both;
+    border: 1px solid var(--secondColor);
+    height: 300px;
+    min-width: 260px !important;
+    max-width: 90% !important;
+    min-height: 200px !important;
+    max-height: 1000px !important;
 }
